fixes letter spacing bug

--- a/_sass/_baseline.scss
+++ b/_sass/_baseline.scss
@@ -21,7 +21,7 @@ h2 {
 
 p {
 	margin: 1.6rem 0;
-	letter-spacing: .8rem;
+	letter-spacing: .08rem;
 	line-height: 2.24rem;
 	font-family: $font-body;
 	font-size: 1.6rem;
