--- a/docs/main.css
+++ b/docs/main.css
@@ -17,7 +17,7 @@ h2 {
 
 p {
   margin: 1.6rem 0;
-  letter-spacing: .8rem;
+  letter-spacing: .08rem;
   line-height: 2.24rem;
   font-family: "Lato", sans-serif;
   font-size: 1.6rem; }
